--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,7 +21,9 @@
 
     <!--person fragment-->
     <dimen name="keyline_1">16dp</dimen>
-
+    <dimen name="keyline_2">8dp</dimen>
+    <dimen name="line_width">0.6dp</dimen>
+    <dimen name="person_text_size">18sp</dimen>
 
 
 </resources>
