--- a/app/src/main/res/layout/fragment_person_content.xml
+++ b/app/src/main/res/layout/fragment_person_content.xml
@@ -3,17 +3,40 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout android:background="@drawable/card_avatar_bar" android:layout_width="match_parent" android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            
-            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="我的发起" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_assistant_photo_grey600_36dp" android:drawablePadding="@dimen/keyline_1"/>
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4" android:drawableRight="@drawable/ic_global_arrow_right_2px" android:drawablePadding="@dimen/keyline_1" android:layout_gravity="center_vertical" android:layout_marginRight="@dimen/keyline_1"/>
-
+    <LinearLayout android:background="@drawable/card_avatar_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:paddingBottom="@dimen/keyline_1" android:paddingTop="@dimen/keyline_2">
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_assistant_photo_grey600_36dp" android:layout_marginLeft="@dimen/keyline_1"/>
+            <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:text="我的发起" android:textSize="@dimen/person_text_size" android:layout_marginLeft="@dimen/keyline_1"/>
+            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_global_arrow_right_2px" android:layout_marginRight="@dimen/keyline_1"/>
         </LinearLayout>
-
+        <View android:layout_width="match_parent" android:layout_height="@dimen/line_width" android:background="@color/line_color"/>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:paddingBottom="@dimen/keyline_1" android:paddingTop="@dimen/keyline_2">
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_person_add_grey600_36dp" android:layout_marginLeft="@dimen/keyline_1"/>
+            <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:text="我的报名" android:textSize="@dimen/person_text_size" android:layout_marginLeft="@dimen/keyline_1"/>
+            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_global_arrow_right_2px" android:layout_marginRight="@dimen/keyline_1"/>
+        </LinearLayout>
+        <View android:layout_width="match_parent" android:layout_height="@dimen/line_width" android:background="@color/line_color"/>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:paddingBottom="@dimen/keyline_1" android:paddingTop="@dimen/keyline_2">
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_speaker_notes_grey600_36dp" android:layout_marginLeft="@dimen/keyline_1"/>
+            <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:text="我的评论" android:textSize="@dimen/person_text_size" android:layout_marginLeft="@dimen/keyline_1"/>
+            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_global_arrow_right_2px" android:layout_marginRight="@dimen/keyline_1"/>
+        </LinearLayout>
+        <View android:layout_width="match_parent" android:layout_height="@dimen/line_width" android:background="@color/line_color"/>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:paddingBottom="@dimen/keyline_1" android:paddingTop="@dimen/keyline_2">
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_contacts_grey600_36dp" android:layout_marginLeft="@dimen/keyline_1"/>
+            <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:text="我的资料" android:textSize="@dimen/person_text_size" android:layout_marginLeft="@dimen/keyline_1"/>
+            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_global_arrow_right_2px" android:layout_marginRight="@dimen/keyline_1"/>
+        </LinearLayout>
+        <View android:layout_width="match_parent" android:layout_height="@dimen/line_width" android:background="@color/line_color"/>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:paddingBottom="@dimen/keyline_1" android:paddingTop="@dimen/keyline_2">
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_people_grey600_36dp" android:layout_marginLeft="@dimen/keyline_1"/>
+            <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:text="我的访客" android:textSize="@dimen/person_text_size" android:layout_marginLeft="@dimen/keyline_1"/>
+            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_global_arrow_right_2px" android:layout_marginRight="@dimen/keyline_1"/>
+        </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
