--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,14 @@
 
     <!--person -->
     <color name="line_color">#DDDDDD</color>
+    <color name="line_color_white">#ffffff</color>
+    <color name="person_text_color">#aaaaaa</color>
+
+    <!--host activity-->
+    <color name="bottom_bar_bg_color">#F1F4F4</color>
+    <!-- 底部菜单选中状态颜色 -->
+    <color name="host_text_color_checked">#3BC0B5</color>
+    <!-- 底部菜单文字未选中颜色 -->
+    <color name="host_text_color_normal">#A5A5A5</color>
 
 </resources>
